# CrystalBase

./: .clang-format  CMakeLists.txt  main.cpp
include/CrystalBase/: base.h  bitwise.h  concepts.h  container_types.h  containers.h  dblist.h  error.h  file_io.h  fixed_string.h  integer_sequence.h  primitive_types.h  stable_vector.h  statements.h  static_format.h  strict_index.h  string.h  string_literal.h  unrolled_for_loop.h
src/: base.cpp  concepts.cpp  container_types.cpp  containers.cpp  fixed_string.cpp  header_only.cpp  primitive_types.cpp  stable_vector.cpp  statements.cpp  static_format.cpp  strict_index.cpp  string.cpp  unrolled_for_loop.cpp
test/: CMakeLists.txt  stable_vector.test.cpp  strict_index.test.cpp  unrolled_for_loop.test.cpp
